# //BUILD.bazel

# Copyright 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "dpdk_target",
    define_values = {
        "target": "dpdk",
    },
)

config_setting(
    name = "es2k_target",
    define_values = {
        "target": "es2k",
    },
)

cc_shared_library(
    name = "krnlmon",
    user_link_flags = [
        "-lpthread",
        "-lnl-3",
    ],
    deps = [
        "//switchapi",
        "//switchlink",
        "//switchlink/sai",
        "//switchsai",
        "//switchsde",
    ],
)

cc_library(
    name = "krnlmon_main",
    srcs = ["krnlmon_main.cc"],
    hdrs = ["krnlmon_main.h"],
    deps = [
        "//switchlink:switchlink_main",
        "@com_google_absl//absl/synchronization",
    ],
)
