# //switchapi/BUILD.bazel

# Copyright 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

PD_ROUTING_DEPS = select(
    {
        "//:dpdk_target": ["//switchapi/dpdk:switch_pd_routing"],
        "//:es2k_target": ["//switchapi/es2k:switch_pd_routing"],
    },
    no_match_error = "must specify --define target={dpdk|es2k}",
)

TARGET_DEFINES = select(
    {
        "//:dpdk_target": ["DPDK_TARGET"],
        "//:es2k_target": ["ES2K_TARGET"],
    },
    no_match_error = "must specify --define target={dpdk|es2k}",
)

cc_library(
    name = "switch_base_types",
    hdrs = ["switch_base_types.h"],
    deps = [
        "@local_dpdk_bin//:dpdk_sde",
        "@local_dpdk_bin//:judy_hdrs",
        "@local_dpdk_bin//:target_sys",
        "@local_dpdk_bin//:tommyds_hdrs",
    ],
)

cc_library(
    name = "switch_config",
    hdrs = ["switch_config.h"],
    deps = [
        "switch_config_int",
        ":switch_base_types",
        ":switch_handle",
        ":switch_table",
    ],
)

cc_library(
    name = "switch_config_int",
    hdrs = ["switch_config_int.h"],
    deps = [
        ":switch_device",
        ":switch_id",
        ":switch_table",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_device",
    hdrs = ["switch_device.h"],
    deps = [
        ":switch_base_types",
    ],
)

cc_library(
    name = "switch_device_int",
    hdrs = ["switch_device_int.h"],
    deps = [
        ":switch_base_types",
    ],
)

cc_library(
    name = "switch_fdb",
    hdrs = ["switch_fdb.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_interface",
    ],
)

cc_library(
    name = "switch_handle",
    hdrs = ["switch_handle.h"],
    deps = [
        ":switch_base_types",
        ":switch_id",
        ":switch_status",
    ],
)

cc_library(
    name = "switch_handle_int",
    hdrs = ["switch_handle_int.h"],
    defines = TARGET_DEFINES,
    deps = [
        # ":switch_internal",
        "@local_dpdk_bin//:target_utils",
    ],
)

cc_library(
    name = "switch_id",
    hdrs = ["switch_id.h"],
    deps = [
        ":switch_base_types",
    ],
)

cc_library(
    name = "switch_interface",
    hdrs = ["switch_interface.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_internal",
    hdrs = ["switch_internal.h"],
    deps = [
        ":switch_device_int",
        ":switch_handle_int",
        ":switch_status",
        "//switchutils:switch_log",
        "//switchutils:switch_utils",
        "@local_dpdk_bin//:tdi_hdrs",
    ],
)

cc_library(
    name = "switch_l3",
    hdrs = ["switch_l3.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_l3_int",
    ],
)

cc_library(
    name = "switch_l3_int",
    hdrs = ["switch_l3_int.h"],
    deps = [
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_lag",
    hdrs = ["switch_lag.h"],
    deps = [
        ":switch_base_types",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_neighbor",
    hdrs = ["switch_neighbor.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_neighbor_int",
    ],
)

cc_library(
    name = "switch_neighbor_int",
    hdrs = ["switch_neighbor_int.h"],
    defines = TARGET_DEFINES,
    deps = [
        ":switch_pd_routing",
        ":switch_rif",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_nhop",
    hdrs = ["switch_nhop.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_nhop_int",
    hdrs = ["switch_nhop_int.h"],
    defines = TARGET_DEFINES,
    deps = [
        ":switch_nhop",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_pd_routing",
    hdrs = ["switch_pd_routing.h"],
    defines = TARGET_DEFINES,
    deps = PD_ROUTING_DEPS,
)

cc_library(
    name = "switch_port_int",
    hdrs = ["switch_port_int.h"],
)

cc_library(
    name = "switch_rif",
    hdrs = ["switch_rif.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_tunnel",
    ],
)

cc_library(
    name = "switch_rif_int",
    hdrs = ["switch_rif_int.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_tunnel",
    ],
)

cc_library(
    name = "switch_rmac",
    hdrs = ["switch_rmac.h"],
    deps = [
        ":switch_base_types",
        ":switch_status",
    ],
)

cc_library(
    name = "switch_rmac_int",
    hdrs = ["switch_rmac_int.h"],
    deps = [
        ":switch_id",
        ":switch_rmac",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_status",
    hdrs = ["switch_status.h"],
    deps = [
        ":switch_base_types",
    ],
)

cc_library(
    name = "switch_table",
    hdrs = ["switch_table.h"],
    deps = [
        ":switch_base_types",
        "//switchutils:switch_log",
    ],
)

cc_library(
    name = "switch_tunnel",
    hdrs = ["switch_tunnel.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_interface",
        ":switch_types_int",
    ],
)

cc_library(
    name = "switch_types_int",
    hdrs = ["switch_types_int.h"],
    deps = [
        "//switchapi:switch_base_types",
        "//switchapi:switch_handle",
    ],
)

cc_library(
    name = "switch_vrf",
    hdrs = ["switch_vrf.h"],
    deps = [
        ":switch_base_types",
        ":switch_handle",
        ":switch_interface",
    ],
)
