# //switchlink/BUILD.bazel

# Copyright 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_import(
    name = "nl-3",
    hdrs = glob(["netlink/**/*.h"]),
    includes = ["/usr/include/libnl3"],
    system_provided = 1,
)

cc_import(
    name = "nl-route-3",
    hdrs = glob(["netlink/**/*.h"]),
    includes = ["/usr/include/libnl3"],
    system_provided = 1,
)

cc_library(
    name = "switchlink_address",
    srcs = ["switchlink_address.c"],
    deps = [
        ":switchlink_handlers",
        ":switchlink_int",
        "//switchutils:switch_log",
        "@local_dpdk_bin//:target_sys",
    ],
)

cc_library(
    name = "switchlink_db",
    srcs = [
        "switchlink_db.c",
        "switchlink_db.h",
        "switchlink_db_int.h",
    ],
    deps = [
        ":switchlink_int",
        ":switchlink_link_types",
        ":switchlink_types",
        "@local_dpdk_bin//:target_utils",
        "@local_dpdk_bin//:tommyds_hdrs",
        "@local_dpdk_bin//:xxhash_hdrs",
    ],
)

cc_library(
    name = "switchlink_globals",
    srcs = ["switchlink_globals.c"],
    deps = [
        ":switchlink_types",
    ],
)

cc_library(
    name = "switchlink_types",
    srcs = ["switchlink.h"],  # rename
    deps = [
        "//switchutils:switch_utils",
    ],
)

cc_library(
    name = "switchlink_handlers",
    srcs = ["switchlink_handle.h"],  # rename
    deps = [
        ":nl-3",
        ":switchlink_db",
        ":switchlink_types",
    ],
    linkopts = ["-lnl-3"],
)

cc_library(
    name = "switchlink_int",
    srcs = ["switchlink_int.h"],
)

cc_library(
    name = "switchlink_link",
    srcs = [
        "switchlink_link.c",
    ],
    deps = [
        ":switchlink_handlers",
        ":switchlink_int",
        ":switchlink_link_types",
        ":switchlink_types",
        "//switchutils:switch_log",
    ],
)

cc_test(
    name = "switchlink_link_test",
    srcs = [
        "switchlink_link_test.cc",
    ],
    deps = [
        ":switchlink_globals",
        ":switchlink_handlers",
        ":switchlink_link",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "switchlink_link_types",
    srcs = ["switchlink_link.h"],  # rename
)

cc_library(
    name = "switchlink_main",
    srcs = [
        "switchlink_main.c",
        "switchlink_main.h",
    ],
    deps = [
        ":nl-3",
        ":switchlink_int",
        ":switchlink_types",
        "//switchutils:switch_log",
        "@local_dpdk_bin//:target_sys",
    ],
    linkopts = ["-lnl-3"],
)

cc_library(
    name = "switchlink_neigh",
    srcs = ["switchlink_neigh.c"],
    deps = [
        ":switchlink_handlers",
        ":switchlink_int",
        ":switchlink_types",
        "//switchutils:switch_log",
    ],
)

cc_library(
    name = "switchlink_route",
    srcs = ["switchlink_route.c"],
    deps = [
        ":switchlink_handlers",
        ":switchlink_int",
        "//switchutils:switch_log",
    ],
)

cc_library(
    name = "switchlink_utils",
    srcs = ["switchlink_utils.c"],
    hdrs = ["switchlink_utils.h"],
    deps = [
        "//switchutils:switch_utils",
    ],
)
